cmake_minimum_required(VERSION 3.22)
project(SomethingForTheMixBuss VERSION 1.0.0)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_OSX_DEPLOYMENT_TARGET "11.0" CACHE STRING "" FORCE)
set(CMAKE_OSX_ARCHITECTURES "arm64;x86_64" CACHE STRING "" FORCE)

include(FetchContent)
FetchContent_Declare(
    JUCE
    GIT_REPOSITORY https://github.com/juce-framework/JUCE.git
    GIT_TAG        8.0.7
    GIT_SHALLOW    TRUE
)
FetchContent_MakeAvailable(JUCE)

juce_add_plugin(SomethingForTheMixBuss
    COMPANY_NAME                    "Ystu"
    BUNDLE_ID                       "com.ystu.somethingforthemixbuss"
    PLUGIN_MANUFACTURER_CODE        Ystu
    PLUGIN_CODE                     Sftm
    FORMATS                         AU VST3
    PRODUCT_NAME                    "Something For The Mix Buss"
    IS_SYNTH                        FALSE
    NEEDS_MIDI_INPUT                FALSE
    NEEDS_MIDI_OUTPUT               FALSE
    EDITOR_WANTS_KEYBOARD_FOCUS     FALSE
    COPY_PLUGIN_AFTER_BUILD         TRUE
)

target_sources(SomethingForTheMixBuss PRIVATE
    Source/PluginProcessor.cpp
)

target_include_directories(SomethingForTheMixBuss PRIVATE Source)

target_compile_definitions(SomethingForTheMixBuss PUBLIC
    JUCE_WEB_BROWSER=0
    JUCE_USE_CURL=0
    JUCE_VST3_CAN_REPLACE_VST2=0
)

target_link_libraries(SomethingForTheMixBuss PRIVATE
    juce::juce_audio_utils
    juce::juce_audio_plugin_client
    juce::juce_recommended_config_flags
    juce::juce_recommended_lto_flags
    juce::juce_recommended_warning_flags
)
